# claude-isolated

./: .gitignore  CHANGELOG.md  CLAUDE.md  Containerfile  README.md  pyproject.toml  renovate.json
.githooks/: commit-msg
config/: layout.kdl  wordlist.txt
container/: layout.kdl  start-claude  start-zellij  zellij-config.kdl
docs/archive/: 2026-03-17-DONE.md  2026-03-17-REVIEW.md
docs/plans/: 2026-03-16-claude-isolated-design.md  2026-03-19-worktree-detection.md
home.example/: .claude.json  .gitconfig
home.example/.claude/: CLAUDE.md  credentials.json  settings.json
scripts/: claude-isolated  claude-isolated-build  claude-isolated-enter  claude-isolated-ls  claude-isolated-start  claude-isolated-stop
src/claude_isolated/: cli.py
src/claude_isolated/data/: Containerfile
src/claude_isolated/data/home.example/.config/gh/: hosts.yml
tests/: test-lifecycle.sh
